css/main.less
html {
    background-color: white;
    font-size: 1em;
    line-height: 1.4;
    background-image: radial-gradient(salmon 5%, transparent 0), radial-gradient(salmon 5%, transparent 0);
    background-size: 30px 30px;
    background-position: 0 0, 15px 15px;
    background-attachment: fixed;
    font-family: Montserrat, sans-serif;

    body {

        div {

            &.content {

                margin-bottom: 0rem !important;
                background-color: white;

                hr {

                    &.divider {
                        display: block;
                        height: 1px;
                        border: 0;
                        background-color: #ccc;
                        margin: 0.5em 0;
                        padding: 0;
                        color: red;
                    }

                    &.multi-coloured-divider {
                        height: 1px;
                        @fbp: top left; // "From" background-position value
                        @tbp: top right; // "To" background-position value

                        @-moz-keyframes rainbow {
                            from {
                                background-position: @fbp;
                            }
                            to {
                                background-position: @tbp;
                            }
                        }
                        @-webkit-keyframes rainbow {
                            from {
                                background-position: @fbp;
                            }
                            to {
                                background-position: @tbp;
                            }
                        }
                        @-o-keyframes rainbow {
                            from {
                                background-position: @fbp;
                            }
                            to {
                                background-position: @tbp;
                            }
                        }
                        @-ms-keyframes rainbow {
                            from {
                                background-position: @fbp;
                            }
                            to {
                                background-position: @tbp;
                            }
                        }
                        @-khtml-keyframes rainbow {
                            from {
                                background-position: @fbp;
                            }
                            to {
                                background-position: @tbp;
                            }
                        }
                        @keyframes rainbow {
                            from {
                                background-position: @fbp;
                            }
                            to {
                                background-position: @tbp;
                            }
                        }

                        @gradient: left, red, orange, yellow, green, blue, indigo, violet, indigo, blue, green, yellow, orange, red;
                        background-image: -webkit-linear-gradient(@gradient);
                        background-image: -moz-linear-gradient(@gradient);
                        background-image: -o-linear-gradient(@gradient);
                        background-image: -ms-linear-gradient(@gradient);
                        background-image: -khtml-linear-gradient(@gradient);
                        background-image: linear-gradient(@gradient);
                        @animation: rainbow 10s forwards linear infinite;
                        -moz-animation: @animation;
                        -webkit-animation: @animation;
                        -o-animation: @animation;
                        -khtml-animation: @animation;
                        -ms-animation: @animation;
                        -lynx-animation: @animation;
                        animation: @animation;
                        background-size: 50% auto;
                        -moz-transform: translateZ(0);
                        -webkit-transform: translateZ(0);
                        -o-transform: translateZ(0);
                        -ms-transform: translateZ(0);
                        transform: translateZ(0);
                    }
                }

                span {

                    &.emphasis {
                        font-weight: bolder;
                        font-style: italic;
                    }
                }

                section {

                    &.header {

                        padding: 1rem 1rem 1rem;

                        .container {

                            .level {

                                .links {

                                    .level-left {

                                    }

                                    .level-right {

                                        a {

                                            color: inherit;
                                            text-decoration: none;

                                            span {

                                                padding: 5px;

                                                &.fa-github {

                                                    &:hover {
                                                        color: #000000;
                                                    }
                                                }

                                                &.fa-linkedin-square {

                                                    &:hover {
                                                        color: #0073B0;
                                                    }
                                                }
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }

                    &.intro {

                        .container {

                            .columns {

                                .column {

                                    img {
                                        width: 250px;
                                        height: 250px;
                                        border-radius: 180px;
                                    }

                                    p {
                                        margin-bottom: 1em;
                                    }
                                }
                            }
                        }
                    }

                    &.education {

                        .container {

                            .columns {

                                .column {

                                    display: flex;

                                    .box {

                                        width: 100%;

                                        img {
                                            width: 70px !important;
                                            height: 65px !important;
                                            border-radius: 0px;
                                            float: left;
                                            margin-right: 20px;
                                        }

                                        p:nth-child(4) {
                                            margin-left: 90px;
                                        }
                                    }
                                }
                            }
                        }
                    }

                    &.experience {

                        .container {

                            .columns {

                                .column {

                                    display: flex;

                                    .box {

                                        img {
                                            width: 90px !important;
                                            height: 55px !important;
                                            border-radius: 0px;
                                            float: left;
                                            margin-bottom: 20px;
                                        }

                                        p {
                                            clear: both;
                                        }
                                    }
                                }
                            }
                        }
                    }

                    &.skills {

                        .container {

                            .box {

                                overflow-x: auto;

                                table {

                                }
                            }
                        }
                    }

                    &.projects {

                        .container {

                            .box {

                                ul {

                                }
                            }
                        }
                    }
                }

                footer {
                    padding: 1rem 0.5rem 3rem;
                    background-color: white;
                }
            }
        }
    }
}

